<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2016 Magnet Systems, Inc.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/defaultPadding">

    <EditText
        android:id="@+id/createChannelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/createChannelSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/summary"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="3" />

    <Switch
        android:id="@+id/createChannelPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/isPublic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publishPermission"
        android:layout_gravity="start"
        android:id="@+id/textView"/>

    <Spinner
        android:id="@+id/createChannelPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:entries="@array/createChannelPermissions"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/createChannelTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:hint="@string/createChannelTagsHint"
        android:inputType="textCapWords" />

</LinearLayout>
